--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Archived Videos</title>
     <link rel="stylesheet" href="style.css">
     <style>body{margin:15px;}</style>
 </head>
 <body>
 	The PS5 is Overrated  Overhyped and Sucks | <a href="generated/P50dC34WYj0/">generated/P50dC34WYj0/</a> | 2024-05-13 21:11:54<br/>
 	How deep is the JRPG kings Grief? | <a href="generated/CnVX95TuJv8/">generated/CnVX95TuJv8/</a> | 2024-05-13 21:12:27<br/>
+	The 9th Generation of Consoles is Embarrassing! | <a href="generated/5ANpUBNaSxU/">generated/5ANpUBNaSxU/</a> | 2024-05-13 21:17:53<br/>
 
 </body>
 </html>
