fix layout for 4:3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	The PS5 is Overrated  Overhyped and Sucks | <a href="generated/P50dC34WYj0/">generated/P50dC34WYj0/</a> | 2024-05-13 21:11:54<br/>
 	How deep is the JRPG kings Grief? | <a href="generated/CnVX95TuJv8/">generated/CnVX95TuJv8/</a> | 2024-05-13 21:12:27<br/>
 	The 9th Generation of Consoles is Embarrassing! | <a href="generated/5ANpUBNaSxU/">generated/5ANpUBNaSxU/</a> | 2024-05-13 21:17:53<br/>
+	Yakuza Brainrot | <a href="generated/MiaCgzXhnAo/">generated/MiaCgzXhnAo/</a> | 2024-05-13 21:31:46<br/>
 
 </body>
 </html>
