--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archived Videos</title>
-    <link rel="stylesheet" href="style.css">
-    <style>body{margin:15px;}</style>
-</head>
-<body>
-	The PS5 is Overrated  Overhyped and Sucks | <a href="generated/P50dC34WYj0/">generated/P50dC34WYj0/</a> | 2024-05-13 21:11:54<br/>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Archived Videos</title>
+        <link rel="stylesheet" href="style.css">
+        <style>body{margin:15px;}</style>
+    </head>
+    <body>
+    	The PS5 is Overrated  Overhyped and Sucks | <a href="generated/P50dC34WYj0/">generated/P50dC34WYj0/</a> | 2024-05-13 21:11:54<br/>
 	How deep is the JRPG kings Grief? | <a href="generated/CnVX95TuJv8/">generated/CnVX95TuJv8/</a> | 2024-05-13 21:12:27<br/>
 	The 9th Generation of Consoles is Embarrassing! | <a href="generated/5ANpUBNaSxU/">generated/5ANpUBNaSxU/</a> | 2024-05-13 21:17:53<br/>
 	Yakuza Brainrot | <a href="generated/MiaCgzXhnAo/">generated/MiaCgzXhnAo/</a> | 2024-05-13 21:31:46<br/>
@@ -52,6 +52,19 @@
 	dayofreckoning.wmv | <a href="generated/8PwI1YzqDB0/">generated/8PwI1YzqDB0/</a> | 2024-05-25 22:20:27<br/>
 	Main Theme - the j | <a href="generated/3I5D3ZGJiAY/">generated/3I5D3ZGJiAY/</a> | 2024-05-25 22:26:15<br/>
 	Why Do People Commit Suicide? Director of Suicide Prevention at Mount Sinai | <a href="generated/yL24MCsCn78/">generated/yL24MCsCn78/</a> | 2024-05-30 04:53:26<br/>
+	This Mod Revives Minecraft Legacy Console on Java Edition | <a href="generated/_O0aaonIngg/">generated/_O0aaonIngg/</a> | 2024-06-24 13:23:31<br/>
+	why is everything so bland now? | <a href="generated/_8ZCzhoeQMg/">generated/_8ZCzhoeQMg/</a> | 2024-06-24 14:07:55<br/>
+	trying to beat wii party's other best game mode | <a href="generated/Ygeah3G_6wI/">generated/Ygeah3G_6wI/</a> | 2024-06-25 13:36:18<br/>
+	Journalist Calls for Games Industry to Stand up to Gamers | <a href="generated/-bZfZg1bIeg/">generated/-bZfZg1bIeg/</a> | 2024-06-26 17:13:08<br/>
+	Earth has Terrible Worldbuilding | <a href="generated/I-GpS5PCcLc/">generated/I-GpS5PCcLc/</a> | 2024-06-27 16:44:48<br/>
+	The Sonic Unleashed DLC Everyone Wants to Forget | <a href="generated/-A7Jc9e02rY/">generated/-A7Jc9e02rY/</a> | 2024-06-27 18:06:45<br/>
+	"Somebody that I Used to Know" Miku/Sponge (Animated) | <a href="generated/JmnMAVQH-7Y/">generated/JmnMAVQH-7Y/</a> | 2024-06-28 00:00:44<br/>
+	You Have Already Seen This Mario Galaxy Video | <a href="generated/AIEVCaRI7eg/">generated/AIEVCaRI7eg/</a> | 2024-06-30 14:14:10<br/>
+	How Friendships Changed The Last 50 Years | <a href="generated/zpX0uh2iiDg/">generated/zpX0uh2iiDg/</a> | 2024-07-01 21:57:36<br/>
+	AI is ruining the internet | <a href="generated/UShsgCOzER4/">generated/UShsgCOzER4/</a> | 2024-07-02 00:47:29<br/>
+	Live Life - Sonic and the Black Knight [OST] | <a href="generated/KToROLFBsgc/">generated/KToROLFBsgc/</a> | 2024-07-02 17:21:56<br/>
+	With Me - Sonic and the Black Knight [OST] | <a href="generated/L9I9qsKJL5s/">generated/L9I9qsKJL5s/</a> | 2024-07-02 19:33:06<br/>
+	The Last Time Sega Cared About Sonic? | Why Sonic Unleashed Still Matters in 2024 | <a href="generated/M2vS9Ek4TIQ/">generated/M2vS9Ek4TIQ/</a> | 2024-07-02 23:34:53<br/>
 
-</body>
-</html>
+    </body>
+    </html>
