fix rare decoding error?

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 	Live Life - Sonic and the Black Knight [OST] | <a href="generated/KToROLFBsgc/">generated/KToROLFBsgc/</a> | 2024-07-02 17:21:56<br/>
 	With Me - Sonic and the Black Knight [OST] | <a href="generated/L9I9qsKJL5s/">generated/L9I9qsKJL5s/</a> | 2024-07-02 19:33:06<br/>
 	The Last Time Sega Cared About Sonic? | Why Sonic Unleashed Still Matters in 2024 | <a href="generated/M2vS9Ek4TIQ/">generated/M2vS9Ek4TIQ/</a> | 2024-07-02 23:34:53<br/>
+	Playing PS2 with your best friends in 2002 | <a href="generated/N2EwdDro05w/">generated/N2EwdDro05w/</a> | 2024-07-03 22:10:15<br/>
+	 (Di Gi Charat)PartyNight& | <a href="generated/8_BB1TNCpHw/">generated/8_BB1TNCpHw/</a> | 2024-07-04 01:00:13<br/>
+	Bad Apple!! - Full Version w/video [Lyrics in Romaji, Translation in English] | <a href="generated/9lNZ_Rnr7Jc/">generated/9lNZ_Rnr7Jc/</a> | 2024-07-04 01:20:03<br/>
 
     </body>
     </html>
