--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
 	Playing PS2 with your best friends in 2002 | <a href="generated/N2EwdDro05w/">generated/N2EwdDro05w/</a> | 2024-07-03 22:10:15<br/>
 	 (Di Gi Charat)PartyNight& | <a href="generated/8_BB1TNCpHw/">generated/8_BB1TNCpHw/</a> | 2024-07-04 01:00:13<br/>
 	Bad Apple!! - Full Version w/video [Lyrics in Romaji, Translation in English] | <a href="generated/9lNZ_Rnr7Jc/">generated/9lNZ_Rnr7Jc/</a> | 2024-07-04 01:20:03<br/>
+	Neon Genesis Evangelion (N64):22 Komm, süsser Tod | <a href="generated/b7T1SVnXYsk/">generated/b7T1SVnXYsk/</a> | 2024-07-04 01:53:23<br/>
+	Neon Genesis Evangelion (N64):01 Next Episode | <a href="generated/7V_KcXqbF2k/">generated/7V_KcXqbF2k/</a> | 2024-07-04 01:53:36<br/>
+	Neon Genesis Evangelion (N64):22 Komm, süsser Tod | <a href="generated/b7T1SVnXYsk/">generated/b7T1SVnXYsk/</a> | 2024-07-04 01:54:22<br/>
+	Neon Genesis Evangelion (N64):21 THANATOS-IF I CAN'T BE YOURS | <a href="generated/TU2M242jWxU/">generated/TU2M242jWxU/</a> | 2024-07-04 01:55:25<br/>
+	Neon Genesis Evangelion (N64):18 Tamashii no Refrain | <a href="generated/RYyQvJiom_U/">generated/RYyQvJiom_U/</a> | 2024-07-04 01:57:53<br/>
+	Neon Genesis Evangelion (N64):17 False Regeneration | <a href="generated/zpYI3AVR4Qk/">generated/zpYI3AVR4Qk/</a> | 2024-07-04 01:58:13<br/>
+	Neon Genesis Evangelion (N64):14 Beast II | <a href="generated/W7j9xCT2MKU/">generated/W7j9xCT2MKU/</a> | 2024-07-04 02:00:29<br/>
+	Neon Genesis Evangelion (N64):10 NERV | <a href="generated/8lEAU7MxPAA/">generated/8lEAU7MxPAA/</a> | 2024-07-04 02:02:06<br/>
+	Neon Genesis Evangelion (N64):09 Decisive Battle | <a href="generated/wtfRJ50R3aA/">generated/wtfRJ50R3aA/</a> | 2024-07-04 02:02:41<br/>
+	Neon Genesis Evangelion (N64):02 Angel Attack | <a href="generated/k4saMAYCF8Y/">generated/k4saMAYCF8Y/</a> | 2024-07-04 02:05:03<br/>
 
     </body>
     </html>
