--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
 	[GBA] DigiCommunication 2 - PARTY☆NIGHT(パラパラアレンジver) | <a href="generated/gDZRDfvT82w/">generated/gDZRDfvT82w/</a> | 2024-07-07 17:19:15<br/>
 	恋の抑止力 歌ってみた カラオケ | <a href="generated/z-Wchvmjbuw/">generated/z-Wchvmjbuw/</a> | 2024-07-07 17:22:15<br/>
 	Космические Войска/Space Forces Lyrics Video | <a href="generated/zyrqiKTUAzU/">generated/zyrqiKTUAzU/</a> | 2024-07-07 17:22:45<br/>
+	Super Paper Mario: How to Love When You're Going to Die | <a href="generated/IuAV5koUVIE/">generated/IuAV5koUVIE/</a> | 2024-07-07 17:26:47<br/>
+	So what does the future look like now? | Anywhere but Westminster | <a href="generated/3NL_3KHoxpA/">generated/3NL_3KHoxpA/</a> | 2024-07-07 18:34:31<br/>
+	This Labour city backed Brexit and went Tory: what did it get in return? | Anywhere but Westminster | <a href="generated/FJXMUKeugg4/">generated/FJXMUKeugg4/</a> | 2024-07-07 19:26:26<br/>
+	Best bits: The Tories get wiped out and Labour win a landslide | Election Night | <a href="generated/rCFvIQs7DA0/">generated/rCFvIQs7DA0/</a> | 2024-07-07 21:10:33<br/>
+	Bizarre CGI from BBC election coverage 2005 | <a href="generated/Av-gV5HAxXk/">generated/Av-gV5HAxXk/</a> | 2024-07-07 22:09:33<br/>
+	Neon Genesis Evangelion (Mario 64 Edition) | <a href="generated/qgWqTh6_CyY/">generated/qgWqTh6_CyY/</a> | 2024-07-07 22:50:59<br/>
+	Deadbeat Double Dash!! | <a href="generated/WDVNEjlo4OQ/">generated/WDVNEjlo4OQ/</a> | 2024-07-08 00:46:01<br/>
+	Day and Night but it’s person 4 | <a href="generated/Es2graBw0G4/">generated/Es2graBw0G4/</a> | 2024-07-08 01:14:50<br/>
 
     </body>
     </html>
