frame drop disable ambient

--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
 	Clair de Lune (Studio Version) | <a href="generated/JGJPVl7iQUM/">generated/JGJPVl7iQUM/</a> | 2024-10-08 03:07:08<br/>
 	CLAUDE DEBUSSY:  CLAIR DE LUNE | <a href="generated/CvFH_6DNRCY/">generated/CvFH_6DNRCY/</a> | 2024-10-08 03:25:24<br/>
 	Opening of Dream (夢のスキマ, Yume no Sukima) - End of Evangelion Soundtrack | <a href="generated/D2h8hXPRt_E/">generated/D2h8hXPRt_E/</a> | 2024-10-08 03:36:32<br/>
+	Utada Hikaru - Kiss & Cry (English Subs + Lyrics) | <a href="generated/QV5ZF5PNnoY/">generated/QV5ZF5PNnoY/</a> | 2024-10-08 04:57:11<br/>
+	spike spencer anime demo | <a href="generated/f4GJE9WwZLw/">generated/f4GJE9WwZLw/</a> | 2024-10-08 05:26:26<br/>
+	Neon Genesis Evangelion - Kiss Scene | <a href="generated/RREpnkt4xaw/">generated/RREpnkt4xaw/</a> | 2024-10-08 05:27:16<br/>
+	Neon Genesis Evangelion - After the End Drama CD 1/3 | <a href="generated/HvLfQSoVhrM/">generated/HvLfQSoVhrM/</a> | 2024-10-08 05:36:37<br/>
+	Neon Genesis Evangelion - After the End Drama CD 2/3 | <a href="generated/qT6xKkaSP54/">generated/qT6xKkaSP54/</a> | 2024-10-08 05:47:51<br/>
+	Neon Genesis Evangelion - After the End Drama CD 3/3 | <a href="generated/CgY7wdR66k0/">generated/CgY7wdR66k0/</a> | 2024-10-08 05:57:14<br/>
+	How I Became a TOP 10 Player in Mario Kart 8 Deluxe | <a href="generated/HiRo5GZ6DWE/">generated/HiRo5GZ6DWE/</a> | 2024-10-10 00:37:40<br/>
 
     </body>
     </html>
