add comment updater

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 	Neon Genesis Evangelion - After the End Drama CD 2/3 | <a href="generated/qT6xKkaSP54/">generated/qT6xKkaSP54/</a> | 2024-10-08 05:47:51<br/>
 	Neon Genesis Evangelion - After the End Drama CD 3/3 | <a href="generated/CgY7wdR66k0/">generated/CgY7wdR66k0/</a> | 2024-10-08 05:57:14<br/>
 	How I Became a TOP 10 Player in Mario Kart 8 Deluxe | <a href="generated/HiRo5GZ6DWE/">generated/HiRo5GZ6DWE/</a> | 2024-10-10 00:37:40<br/>
+	These Are Bad For Society | <a href="generated/e2ebWkoEY38/">generated/e2ebWkoEY38/</a> | 2024-10-10 01:42:38<br/>
 
     </body>
     </html>
