fix page opening

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
 	Neon Genesis Evangelion - After the End Drama CD 3/3 | <a href="generated/CgY7wdR66k0/">generated/CgY7wdR66k0/</a> | 2024-10-08 05:57:14<br/>
 	How I Became a TOP 10 Player in Mario Kart 8 Deluxe | <a href="generated/HiRo5GZ6DWE/">generated/HiRo5GZ6DWE/</a> | 2024-10-10 00:37:40<br/>
 	These Are Bad For Society | <a href="generated/e2ebWkoEY38/">generated/e2ebWkoEY38/</a> | 2024-10-10 01:42:38<br/>
+	A "NEW" Sonic Roblox Fan Game... | <a href="generated/IvUwKOUiCQg/">generated/IvUwKOUiCQg/</a> | 2024-10-11 02:54:13<br/>
+	Is Villager Biddybuggy legit? | <a href="generated/Xd5BiZ63lnA/">generated/Xd5BiZ63lnA/</a> | 2024-10-12 06:30:55<br/>
+	the anti woke guys keep gettin weirder | <a href="generated/Ewtgmlr5wsc/">generated/Ewtgmlr5wsc/</a> | 2024-10-16 07:30:28<br/>
+	Paradisio - Bailando | <a href="generated/7B44gyvBsTA/">generated/7B44gyvBsTA/</a> | 2024-10-17 03:11:36<br/>
+	Every argument for $70 games is bad | <a href="generated/FefOXrevKV8/">generated/FefOXrevKV8/</a> | 2024-10-18 03:15:48<br/>
+	Linus Is Worried For His Kids | <a href="generated/yRzjj_3b3a0/">generated/yRzjj_3b3a0/</a> | 2024-10-19 04:49:30<br/>
 
     </body>
     </html>
