make offline function better

--- a/index.html
+++ b/index.html
@@ -271,6 +271,40 @@
 	Why Is Everyone So Mean? | <a href="generated/9XJa8Ul58U0/">generated/9XJa8Ul58U0/</a> | 2024-11-18 20:49:47<br/>
 	Thoughts on the PlayStation 5 and Xbox Series X So Far | <a href="generated/4QRotuBo9_0/">generated/4QRotuBo9_0/</a> | 2024-11-19 05:07:01<br/>
 	I Like Mario More as an Adult | <a href="generated/TcZmbE4Pt1U/">generated/TcZmbE4Pt1U/</a> | 2024-11-19 16:01:37<br/>
+	Gen Z Doesn’t Know How To Socialize IRL Anymore ... | <a href="generated/A58L96hpcMg/">generated/A58L96hpcMg/</a> | 2024-11-19 17:50:30<br/>
+	How Persona 5's Okumura Palace was FIXED | <a href="generated/1lkKn5Ly3so/">generated/1lkKn5Ly3so/</a> | 2024-11-20 05:34:22<br/>
+	The Entire History of Japanese RPGs | <a href="generated/EhQamvbfDxc/">generated/EhQamvbfDxc/</a> | 2024-11-21 03:55:48<br/>
+	I'm Worried About The Future Of The Internet... | <a href="generated/tVPG3LrNMYg/">generated/tVPG3LrNMYg/</a> | 2024-11-22 04:17:12<br/>
+	The END of England | <a href="generated/nlncZp1iJks/">generated/nlncZp1iJks/</a> | 2024-11-22 04:19:25<br/>
+	Google Has To Sell Chrome??? - WAN Show November 22, 2024 | <a href="generated/cae3ichfSE4/">generated/cae3ichfSE4/</a> | 2024-11-23 02:28:46<br/>
+	sonic frontiers only up is scary | <a href="generated/SmVXNi5jaOM/">generated/SmVXNi5jaOM/</a> | 2024-11-24 05:59:32<br/>
+	The Original Persona 5 | <a href="generated/Oyp-x0e2tn8/">generated/Oyp-x0e2tn8/</a> | 2024-11-29 07:18:25<br/>
+	congrats! you have no personality | <a href="generated/6SSbROX3GxM/">generated/6SSbROX3GxM/</a> | 2024-11-29 20:55:22<br/>
+	I HATE TEARS OF THE KINGDOM | <a href="generated/4unKwPQMoOA/">generated/4unKwPQMoOA/</a> | 2024-11-30 19:05:59<br/>
+	A Manga About Love and Consumerism | <a href="generated/ZsKJjfAZNZo/">generated/ZsKJjfAZNZo/</a> | 2024-12-01 20:34:40<br/>
+	I became the Most TOXIC Player in Mario Kart 8 Deluxe | <a href="generated/71tzcPSh57s/">generated/71tzcPSh57s/</a> | 2024-12-02 02:49:55<br/>
+	When you race with 11 Japanese Players... | Mario Kart 8 Deluxe | <a href="generated/xmD6uoGeUw0/">generated/xmD6uoGeUw0/</a> | 2024-12-08 02:33:28<br/>
+	Learn How To Cook in Under 25 Minutes | <a href="generated/P6W8kwmwcno/">generated/P6W8kwmwcno/</a> | 2024-12-08 09:48:43<br/>
+	Minecraft Education Edition’s Failures | <a href="generated/K1DoZCJcxFE/">generated/K1DoZCJcxFE/</a> | 2024-07-13 07:24:08<br/>
+	Lucky Star Is Deeper Than You Think | <a href="generated/_kN1vPPxXII/">generated/_kN1vPPxXII/</a> | 2024-09-13 15:39:45<br/>
+	Eggman Gets Angry and Smashes Ice Wall - Sonic Lost World | <a href="generated/ot0TDEqG7Xc/">generated/ot0TDEqG7Xc/</a> | 2024-10-04 02:43:24<br/>
+	South Korea is Broken. | <a href="generated/tG2OQsT8eGU/">generated/tG2OQsT8eGU/</a> | 2024-12-13 14:29:15<br/>
+	Family Guy Online Gameplay - First Look HD | <a href="generated/_8GZMlFTg3o/">generated/_8GZMlFTg3o/</a> | 2024-12-15 13:57:31<br/>
+	100% Typical Competitive Mario Kart 8 Deluxe | <a href="generated/yyajhKFkhw0/">generated/yyajhKFkhw0/</a> | 2024-12-15 21:42:51<br/>
+	Bowser's Fury in 2024 | <a href="generated/PLYBx48wjmY/">generated/PLYBx48wjmY/</a> | 2024-12-16 11:07:31<br/>
+	I Redesigned the ENTIRE YouTube UI from Scratch | <a href="generated/OUM6XmhViN4/">generated/OUM6XmhViN4/</a> | 2024-12-16 11:56:07<br/>
+	ARPAnet - the team behind the internet | <a href="generated/Cg_XeRSD6Rg/">generated/Cg_XeRSD6Rg/</a> | 2024-12-17 11:48:40<br/>
+	*EVERYONE'S* Items are 100% Randomized in Mario Kart | <a href="generated/yOGkSYakpag/">generated/yOGkSYakpag/</a> | 2025-01-08 04:52:15<br/>
+	Elon Doesn't Care About Your Privacy | <a href="generated/YLGykCsX5ng/">generated/YLGykCsX5ng/</a> | 2025-01-08 20:02:27<br/>
+	Why Does Everyone Hate Notch? | <a href="generated/G-zkwYFgcEU/">generated/G-zkwYFgcEU/</a> | 2025-01-10 21:34:25<br/>
+	My Thoughts on The Current State of YouTube | <a href="generated/cHAjUGKPYMk/">generated/cHAjUGKPYMk/</a> | 2025-01-14 08:36:09<br/>
+	IMG_1572 | <a href="generated/3o5kE4uw6jk/">generated/3o5kE4uw6jk/</a> | 2025-01-18 05:37:26<br/>
+	End of Quay (Parody of Komm,susser Tod by Arianne) | <a href="generated/KOq3rJxfcBg/">generated/KOq3rJxfcBg/</a> | 2025-01-18 06:36:21<br/>
+	Why I won't take sponsors | <a href="generated/R3aTL38wAfU/">generated/R3aTL38wAfU/</a> | 2025-01-22 07:14:49<br/>
+	【Aiobahn】 INTERNET YAMERO (ft. KOTOKO) | English Subtitle | <a href="generated/dlXT3paR-9Q/">generated/dlXT3paR-9Q/</a> | 2025-02-01 23:43:05<br/>
+	Edge ~ TWD98 | <a href="generated/EmgzVu03wtU/">generated/EmgzVu03wtU/</a> | 2025-02-04 17:05:51<br/>
+	The Largest Sandbox Game Ever Made (4D Miner Devlog #4) | <a href="generated/f4CMKoVgqOM/">generated/f4CMKoVgqOM/</a> | 2025-02-15 04:22:57<br/>
+	Mario Kart Wii: Retro Rewind Just Got NEW DLC! | <a href="generated/F5j4d2BSPFk/">generated/F5j4d2BSPFk/</a> | 2025-02-17 18:06:11<br/>
 
     </body>
     </html>
