REFACTOR: update video download and server handling; rename old info.json files

--- a/index.html
+++ b/index.html
@@ -308,7 +308,38 @@
 	The Chinese Century is here. | <a href="generated/KR36dgHilPE/">generated/KR36dgHilPE/</a> | 2025-02-18 02:39:33<br/>
 	Which TV Channels Should Be SHUTDOWN...? | <a href="generated/PUd3O56l4U4/">generated/PUd3O56l4U4/</a> | 2025-02-18 03:06:03<br/>
 	Mr. Beast is Hilariously Greedy | <a href="generated/dvRlNAHXRMg/">generated/dvRlNAHXRMg/</a> | 2025-02-18 06:00:27<br/>
-	Narukami's Subtle Spanish Skills | <a href="generated/tGYq8SM9_mU/">generated/tGYq8SM9_mU/</a> | 2025-02-18 07:13:40<br/> 
-	Your Hatred of Cringe Makes No Sense | <a href="generated/NGRXWuPkVis/">generated/NGRXWuPkVis/</a> | 2025-02-18 07:13:40<br/>
+	Narukami's Subtle Spanish Skills | <a href="generated/tGYq8SM9_mU/">generated/tGYq8SM9_mU/</a> | 2025-02-18 07:13:40<br/>
+	British SpongeBob (SpongeRobert QuadrilateralTrousers) | <a href="generated/9NOCMCAGUhA/">generated/9NOCMCAGUhA/</a> | 2025-02-18 13:43:33<br/>
+	Nyan Nyan | <a href="generated/wsaFy4JxQLk/">generated/wsaFy4JxQLk/</a> | 2025-02-18 14:30:15<br/>
+	⠀ ⠀ ⠀ | <a href="generated/StjW_iuFln4/">generated/StjW_iuFln4/</a> | 2025-02-18 14:37:35<br/>
+	Making A Minecraft Movie is Easy, Actually | <a href="generated/W4pRqVWVBUE/">generated/W4pRqVWVBUE/</a> | 2025-02-18 15:09:30<br/>
+	Xbox Has Hit Rock Bottom... | <a href="generated/0hDFk06yOJ4/">generated/0hDFk06yOJ4/</a> | 2025-02-19 02:18:02<br/>
+	Gen Z Sucks at Friendship And It’s Only Getting Worse | <a href="generated/qAmYLsEqC34/">generated/qAmYLsEqC34/</a> | 2025-02-19 02:24:22<br/>
+	Amazon revokes the concept of owning books, can edit books you already bought; PIRACY IS THE ANSWER! | <a href="generated/XfcoUdWCB9M/">generated/XfcoUdWCB9M/</a> | 2025-02-19 04:10:01<br/>
+	How the UK fixed this food label problem (and why the US hasn’t) | <a href="generated/Au6FA4cJyEQ/">generated/Au6FA4cJyEQ/</a> | 2025-02-19 20:36:01<br/>
+	The Wii | <a href="generated/selJlhwv7JQ/">generated/selJlhwv7JQ/</a> | 2025-02-20 00:33:00<br/>
+	Glazing Sonic Lost World (because it deserves it) | <a href="generated/Vky32f7m-1U/">generated/Vky32f7m-1U/</a> | 2025-02-20 00:58:13<br/>
+	proper british pop culture moments we don't talk about enough innit 12 | <a href="generated/mtPd6HH2cmk/">generated/mtPd6HH2cmk/</a> | 2025-02-20 02:51:01<br/>
+	Borzoi dog taking a bath by himself | <a href="generated/sZW5jySoFTM/">generated/sZW5jySoFTM/</a> | 2025-02-20 03:04:44<br/>
+	This is NOT a Kaze Emanuar Video... | <a href="generated/-VZMYRtFCU0/">generated/-VZMYRtFCU0/</a> | 2025-02-20 03:10:08<br/>
+	How Does the Hedgehog Engine Work? | <a href="generated/oEwbloJOStA/">generated/oEwbloJOStA/</a> | 2025-02-20 03:41:33<br/>
+	Oh the misery 4chan cat thread | <a href="generated/6SuiZ5OxMKk/">generated/6SuiZ5OxMKk/</a> | 2025-02-20 03:47:11<br/>
+	Sonic Forces - First Impressions | <a href="generated/bmUBYTclxVo/">generated/bmUBYTclxVo/</a> | 2025-02-21 07:15:13<br/>
+	Is physical media making a comeback? | <a href="generated/eNqkVtIDJMY/">generated/eNqkVtIDJMY/</a> | 2025-02-21 07:25:04<br/>
+	YouTube is LYING to Us. | <a href="generated/NQlpb2QWmBs/">generated/NQlpb2QWmBs/</a> | 2025-02-21 17:33:45<br/>
+	What if you can't reject convenience? | <a href="generated/yGlXEcLPyyI/">generated/yGlXEcLPyyI/</a> | 2025-02-21 17:41:21<br/>
+	Gen Z doesn't watch movies | <a href="generated/Ha441-CJCwQ/">generated/Ha441-CJCwQ/</a> | 2025-02-21 22:21:42<br/>
+	Mario Kart 8 Deluxe Item Rain is HERE! | <a href="generated/1_N7_ddq-ns/">generated/1_N7_ddq-ns/</a> | 2025-02-22 05:17:42<br/>
+	Mario Kart Wii-Shut up and Drive | <a href="generated/CJtbXdzqSNs/">generated/CJtbXdzqSNs/</a> | 2025-02-22 06:14:14<br/>
+	How I Made My First Mario Kart 8 Deluxe Custom Track | <a href="generated/AU4oyP0xHys/">generated/AU4oyP0xHys/</a> | 2025-02-22 06:40:25<br/>
+	ろん -「おちゃめ機能」FUKKIRETA 【HD.256k.Kara】 | <a href="generated/kuNixp-wvWM/">generated/kuNixp-wvWM/</a> | 2025-02-22 07:38:29<br/>
+	Fukkireta but it's niconico annotations | <a href="generated/m7T3OXtGjFM/">generated/m7T3OXtGjFM/</a> | 2025-02-22 07:47:24<br/>
+	Kasane Teto - Teto territory | <a href="generated/JALbemLw3G4/">generated/JALbemLw3G4/</a> | 2025-02-22 08:35:05<br/>
+	Algorithms are breaking how we think | <a href="generated/QEJpZjg8GuA/">generated/QEJpZjg8GuA/</a> | 2025-02-25 04:05:24<br/>
+	Disney+ encourages customers to unsubscribe & embrace piracy; cat with hdhomerun approves | <a href="generated/cUG8WiIFH80/">generated/cUG8WiIFH80/</a> | 2025-02-26 05:05:27<br/>
+	My Framework Investment Should NOT Have Worked Out | <a href="generated/-lErGZZgUbY/">generated/-lErGZZgUbY/</a> | 2025-02-26 05:23:46<br/>
+	A rant on toxic positivity & selfish people; catching up with Thomas Quiter & his wheelchair project | <a href="generated/Yc4U-tJ-y1E/">generated/Yc4U-tJ-y1E/</a> | 2025-02-26 05:33:46<br/>
+	HP makes customers wait on purpose so you go away | <a href="generated/y3hHTfqRQuA/">generated/y3hHTfqRQuA/</a> | 2025-02-26 05:44:04<br/>
+
     </body>
     </html>
